@@ -52,6 +52,7 @@ if(NOT WIN32)
           test_reqrep_ipc
           test_abstract_ipc
           test_proxy
+          test_proxy_terminate
           test_filter_ipc
   )
   if(HAVE_FORK)
